# chrohime

./: .gitignore  .gitmodules  BUILD.gn  LICENSE  README.md  chrohime.gni  chrohime.h  chrohime_export.h
.github/: issue_template.md
.github/workflows/: main.yml  website.yml
api/: background.cc  background.h  badge.cc  badge.h  bitmap.cc  bitmap.h  border.cc  border.h  buffer.cc  buffer.h  button.cc  button.h  checkbox.cc  checkbox.h  chrohime.h  chrohime_resources.grd  color_id.h  combobox.cc  combobox.h  combobox_model.cc  combobox_model.h  event.cc  event.h  geometry_f.h  image.cc  image.h  label.cc  label.h  label_button.cc  label_button.h  lifetime.cc  lifetime.h  lifetime_no_content.cc  lifetime_with_content.cc  link.cc  link.h  material_button.cc  material_button.h  object.cc  object.h  (+48 more)
api/lifetime/: chrohime_app.h  chrohime_app.mm  chrohime_app_delegate.h  chrohime_app_delegate.mm  chrohime_views_delegate.cc  chrohime_views_delegate.h  lifetime_mac.mm  lifetime_no_content.cc  lifetime_with_content.cc  main_menu_builder.h  main_menu_builder.mm
c/: BUILD.gn  chrohime.h  chrohime_c_impl.cc  chrohime_c_impl.inc  generate_c_impls.py  skia.h
content/: BUILD.gn  chrohime_content_browser_client.cc  chrohime_content_browser_client.h  chrohime_content_client.cc  chrohime_content_client.h  chrohime_content_main_delegate.cc  chrohime_content_main_delegate.h  chrohime_content_main_delegate_mac.mm  chrohime_content_main_main_parts.cc  chrohime_content_main_main_parts.h  content_lifetime_delegate.h
docs/: BUILD.gn  build_html.js  build_html.py  meta.json  name_converter.py  parse_apis.py  parse_apis.pydeps
docs/api/: background.yaml  badge.yaml  bitmap.yaml  blend_mode.yaml  border.yaml  button.yaml  button_state.yaml  checkbox.yaml  clipop.yaml  color_id.yaml  combobox.yaml  combobox_model.yaml  comboboxmodel.yaml  event.yaml  event_flag.yaml  event_type.yaml  image.yaml  key_event.yaml  label.yaml  label_button.yaml  labelbutton.yaml  lifetime.yaml  link.yaml  located_event.yaml  material_button.yaml  material_button_style.yaml  materialbutton.yaml  mouse_event.yaml  object.yaml  paint.yaml  paint_cap.yaml  paint_style.yaml  painter.yaml  path.yaml  path_arc_size.yaml  path_direction.yaml  picker.yaml  point.yaml  pointf.yaml  progress_bar.yaml  (+36 more)
docs/guide/: app-architecture.md  object-types.md  technical-visions.md
docs/layout/: api.css  api.pug  index.pug  page.pug  style.css
docs/tutorial/: app-architecture.md  object-lifetime-management.md  object-types.md  technical-details.md  technical-visions.md
docs/website/: build_website.js  site_index.pug
dylib/: BUILD.gn  ZIP_DESCRIPTION.md  ZIP_README.yaml  chrohime.h  chrohime_c_impl.cc  chrohime_c_impl.inc  generate_c_impls.py  parse_readme.py  skia.h  zip.gni  zip.py  zip.pydeps
gallery/: BUILD.gn  CMakeLists.txt  gallery.c
scripts/: bootstrap.py  build.py  gn_gen.py  src_import.gni  test_dist.py
test/: BUILD.gn  CMakeLists.txt  c_main.c  gallery.c  main.cc
