action("apis_json") {
  inputs = [
    # Basic structures, must come first as they have no forward declarations.
    "api/rect.yaml",
    "api/size.yaml",
    "api/colorid.yaml",
    # Foundamental APIs.
    "api/lifetime.yaml",
    "api/state.yaml",
    # Normal APIs.
    "api/background.yaml",
    "api/badge.yaml",
    "api/border.yaml",
    "api/button.yaml",
    "api/checkbox.yaml",
    "api/combobox.yaml",
    "api/comboboxmodel.yaml",
    "api/label.yaml",
    "api/labelbutton.yaml",
    "api/link.yaml",
    "api/materialbutton_style.yaml",
    "api/materialbutton.yaml",
    "api/picker.yaml",
    "api/progressbar.yaml",
    "api/object.yaml",
    "api/radiobutton.yaml",
    "api/scrollview.yaml",
    "api/simplecomboboxmodel.yaml",
    "api/simpletablemodel.yaml",
    "api/slider.yaml",
    "api/tablemodel.yaml",
    "api/tableview_column.yaml",
    "api/tableview.yaml",
    "api/togglebutton.yaml",
    "api/textarea.yaml",
    "api/textfield_type.yaml",
    "api/textfield.yaml",
    "api/view.yaml",
    "api/window_options.yaml",
    "api/window.yaml",
  ]
  outputs = [
    "$root_out_dir/chrohime_apis.json",
    "$root_out_dir/chrohime_apis_barebone.json",
  ]

  script = "parse_apis.py"
  args = rebase_path(inputs) + [ "--output-dir", rebase_path(root_out_dir) ]
}
